--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,4 @@
+
 * {
   box-sizing: border-box;
   padding: 0;
@@ -25,7 +26,7 @@ body {
   color: #d9dcd6;
 }
 
-/* Changed header div tags to nav for the hyperlinks */
+/* Changed div to nav for semantic structure */
 .header nav {
   padding-top: 15px;
   margin-right: 20px;
